The changes: Navbar orientation fixed; FAQs section added in Navbar; Hello Villager colour visible

--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,7 @@ h3 {
 h1 {
   font-size: 2.8rem;
   font-weight: 700;
+  color: #f1c11a;
 }
 
 h2 {
@@ -522,7 +523,7 @@ strong {
 
 #about,
 #services,
-#contact {
+#contact{
   background: #ffffff;
 }
 
